After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708870 - "generic" is spelled wrong in GstBaseSrc's documentation
"generic" is spelled wrong in GstBaseSrc's documentation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal trivial
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-26 20:10 UTC by Brendan Long
Modified: 2013-09-26 20:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Replace "generice" with "generic" (908 bytes, patch)
2013-09-26 20:10 UTC, Brendan Long
committed Details | Review

Description Brendan Long 2013-09-26 20:10:57 UTC
Created attachment 255873 [details] [review]
Replace "generice" with "generic"

> This is a generice base class for source elements.

Should be:

> This is a generic base class for source elements.
Comment 1 Tim-Philipp Müller 2013-09-26 20:17:35 UTC
Pushed, thanks for the patch!

 commit a89d53dd32309e7f38ea4b5ef3af1e20f0d4166b
 Author: Brendan Long <b.long@cablelabs.com>
 Date:   Thu Sep 26 14:09:02 2013 -0600

    docs: fix spelling of "generic" in GstBaseSrc's documentation.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=708870