docs: fix spelling of "generic" in GstBaseSrc's documentation.

https://bugzilla.gnome.org/show_bug.cgi?id=708870